# minigl

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
assets/shaders/: frag.glsl  vert.glsl
include/core/: Shader.h  Window.h
include/gfx/: Buffer.h
src/: main_demo.cpp
src/core/: Shader.cpp  Window.cpp
